17 April 2004 Sylvain Pion
- Shorten symbol name CC_iterator -> CCit.

26 March 2004 Radu Ursu
-made doc work with the current implementation of the Manual tools

25 Feb 2004 Sylvain Pion
- Document Insert_iterator [bug#210].

21 Feb 2004 Sylvain Pion
- Move successor() and predecessor() from Convex_hull_2 to STL_Extension.

17 Feb 2004 Sylvain Pion
- Remove CGAL_CFG_NO_PARTIAL_CLASS_TEMPLATE_SPECIALISATION
  and associated CGAL/functional_msvc.h :)

10 February 2004 Radu Ursu
-Updated headers in examples


//---------------------------------------------------------------------
//      revision 303
//---------------------------------------------------------------------
- Remove useless reference to CGAL_CFG_ENUM_BUG

//---------------------------------------------------------------------
//      revision 302
//---------------------------------------------------------------------
- Compact_container : Remove CGAL_CFG_EARLY_INSTANTIATION_BUG workarounds.

//---------------------------------------------------------------------
//      revision 301
//---------------------------------------------------------------------
- Compact_container : mark some code as deprecated, and optimize
  construct_insert() by taking reference arguments...

//---------------------------------------------------------------------
//      revision 300
//---------------------------------------------------------------------
- remove the useless "b_" field in Filter_iterator, and update the interface
  accordingly.  Update Nested_iterator accordingly.

//---------------------------------------------------------------------
//      revision 299
//---------------------------------------------------------------------
- introduced Creator_uniform_d in the function_objects.h header and documented

//---------------------------------------------------------------------
//      revision 298
//---------------------------------------------------------------------
- changed headers
