@@ -1,4 +1,4 @@
-// Copyright (c) 2003  Utrecht University (The Netherlands),
+// Copyright (c) 2003-2004  Utrecht University (The Netherlands),
 // ETH Zurich (Switzerland), Freie Universitaet Berlin (Germany),
 // INRIA Sophia-Antipolis (France), Martin-Luther-University Halle-Wittenberg
 // (Germany), Max-Planck-Institute Saarbruecken (Germany), RISC Linz (Austria),
@@ -84,6 +84,8 @@ CGAL_BEGIN_NAMESPACE
 
 // The following base class can be used to easily add a squattable pointer
 // to a class (maybe you loose a bit of compactness though).
+// TODO : Shouldn't adding these bits be done automatically and transparently,
+//        based on the traits class info ?
 class Compact_container_base
 {
   void * p;
@@ -103,10 +105,8 @@ struct Compact_container_traits {
 };
 
 namespace CGALi {
-  // We use a short name (was CC_iterator before) because this symbol
-  // shows up really often.
-  template < class DSC, class Ptr, class Ref >
-  class CCit;
+  template < class DSC, bool Const >
+  class CC_iterator;
 }
 
 template < class T, class Allocator = CGAL_ALLOCATOR(T) >
@@ -123,15 +123,13 @@ public:
   typedef typename Allocator::const_pointer         const_pointer;
   typedef typename Allocator::size_type             size_type;
   typedef typename Allocator::difference_type       difference_type;
-  typedef CGALi::CCit<Self, pointer, reference>
-    iterator;
-  typedef CGALi::CCit<Self, const_pointer, const_reference>
-    const_iterator;
+  typedef CGALi::CC_iterator<Self, false>           iterator;
+  typedef CGALi::CC_iterator<Self, true>            const_iterator;
   typedef std::reverse_iterator<iterator>           reverse_iterator;
   typedef std::reverse_iterator<const_iterator>     const_reverse_iterator;
 
-  friend class CGALi::CCit<Self, pointer, reference>;
-  friend class CGALi::CCit<Self, const_pointer, const_reference>;
+  friend class CGALi::CC_iterator<Self, false>;
+  friend class CGALi::CC_iterator<Self, true>;
 
   explicit Compact_container(const Allocator &a = Allocator())
   : alloc(a)
@@ -182,7 +180,7 @@ public:
     std::swap(free_list, c.free_list);
   }
 
-  iterator begin() { return iterator(first_item, 0, 0); } // , 0, 0
+  iterator begin() { return iterator(first_item, 0, 0); }
   iterator end()   { return iterator(last_item, 0); }
 
   const_iterator begin() const { return const_iterator(first_item, 0, 0); }
@@ -634,29 +632,47 @@ bool operator>=(const Compact_container<T, Allocator> &lhs,
 
 namespace CGALi {
 
-  template < class DSC, class Ptr, class Ref >
-  class CCit
+  // This template metaprogramming bit should move from here.
+  // Select<bool b, T1, T2>::Type is (b?T1:T2).
+  template < bool, typename, typename >
+  struct Select;
+
+  template < typename T1, typename T2 >
+  struct Select<true, T1, T2> {
+    typedef T1    Type;
+  };
+
+  template < typename T1, typename T2 >
+  struct Select<false, T1, T2> {
+    typedef T2    Type;
+  };
+
+
+  template < class DSC, bool Const >
+  class CC_iterator
   {
     typedef typename DSC::iterator                    iterator;
-    typedef CCit<DSC, Ptr, Ref>                       Iterator;
+    typedef CC_iterator<DSC, Const>                   Self;
   public:
-    typedef Ptr                                       pointer;
-    typedef Ref                                       reference;
     typedef typename DSC::value_type                  value_type;
     typedef typename DSC::size_type                   size_type;
     typedef typename DSC::difference_type             difference_type;
+    typedef typename Select<Const, const value_type*,
+                                   value_type*>::Type pointer;
+    typedef typename Select<Const, const value_type&,
+                                   value_type&>::Type reference;
     typedef std::bidirectional_iterator_tag           iterator_category;
 
     // the initialization with NULL is required by our Handle concept.
-    CCit() : p(NULL) {}
+    CC_iterator() : p(NULL) {}
 
     // Either a harmless copy-ctor,
     // or a conversion from iterator to const_iterator.
-    CCit(const iterator &it)
+    CC_iterator(const iterator &it)
     : p(&*it) {}
 
     // Same for assignment operator (otherwise MipsPro warns)
-    CCit & operator=(const iterator &it)
+    CC_iterator & operator=(const iterator &it)
     {
       p = it.p;
       return *this;
@@ -667,7 +683,7 @@ namespace CGALi {
     // our code without the feature, but we want to keep it forever
     // for backward compatibility.
     // Construction from NULL
-    CCit(CGAL_NULL_TYPE CGAL_assertion_code(n))
+    CC_iterator(CGAL_NULL_TYPE CGAL_assertion_code(n))
     : p(NULL)
     {
       CGAL_assertion( n == NULL);
@@ -682,7 +698,7 @@ namespace CGALi {
     friend class Compact_container<value_type, typename DSC::allocator_type>;
 
     // For begin()
-    CCit(pointer ptr, int, int)
+    CC_iterator(pointer ptr, int, int)
     : p(ptr)
     {
       if (p == NULL) // empty container.
@@ -692,7 +708,7 @@ namespace CGALi {
         increment();
     }
     // Construction from raw pointer and for end().
-    CCit(pointer ptr, int)
+    CC_iterator(pointer ptr, int)
     : p(ptr) {}
 
     // NB : in case empty container, begin == end == NULL.
@@ -736,18 +752,18 @@ namespace CGALi {
 
   public:
 
-    Iterator & operator++() { increment(); return *this; }
-    Iterator & operator--() { decrement(); return *this; }
+    Self & operator++() { increment(); return *this; }
+    Self & operator--() { decrement(); return *this; }
 
-    Iterator operator++(int) { Iterator tmp(*this); ++(*this); return tmp; }
-    Iterator operator--(int) { Iterator tmp(*this); --(*this); return tmp; }
+    Self operator++(int) { Self tmp(*this); ++(*this); return tmp; }
+    Self operator--(int) { Self tmp(*this); --(*this); return tmp; }
 
     reference operator*() const { return *p; }
     pointer   operator->() const { return p; }
 
 #ifndef CGAL_NO_DEPRECATED_CODE
     // For std::less...
-    bool operator<(const CCit& other) const
+    bool operator<(const CC_iterator& other) const
     {
       return p < other.p;
     }
@@ -762,58 +778,58 @@ namespace CGALi {
 // G++ 2.95 has loosy namespace support,
 // and this produces conflicts with std::rel_ops...
 
-  template < class DSC, class Ptr, class Ref >
+  template < class DSC, bool Const >
   inline
-  bool operator==(const CCit<DSC, Ptr, Ref> &rhs,
-                  const CCit<DSC, Ptr, Ref> &lhs)
+  bool operator==(const CC_iterator<DSC, Const> &rhs,
+                  const CC_iterator<DSC, Const> &lhs)
   { return &*rhs == &*lhs; }
 
-  template < class DSC, class Val >
+  template < class DSC >
   inline
-  bool operator==(const CCit<DSC, Val*, Val&> &rhs,
-                  const CCit<DSC, const Val*, const Val&> &lhs)
+  bool operator==(const CC_iterator<DSC, false> &rhs,
+                  const CC_iterator<DSC, true> &lhs)
   { return &*rhs == &*lhs; }
 
-  template < class DSC, class Val >
+  template < class DSC >
   inline
-  bool operator==(const CCit<DSC, const Val*, const Val&> &rhs,
-                  const CCit<DSC, Val*, Val&> &lhs)
+  bool operator==(const CC_iterator<DSC, true> &rhs,
+                  const CC_iterator<DSC, false> &lhs)
   { return &*rhs == &*lhs; }
 
-  template < class DSC, class Ptr, class Ref >
+  template < class DSC, bool Const >
   inline
-  bool operator!=(const CCit<DSC, Ptr, Ref> &rhs,
-                  const CCit<DSC, Ptr, Ref> &lhs)
+  bool operator!=(const CC_iterator<DSC, Const> &rhs,
+                  const CC_iterator<DSC, Const> &lhs)
   { return &*rhs != &*lhs; }
 
-  template < class DSC, class Val >
+  template < class DSC >
   inline
-  bool operator!=(const CCit<DSC, Val*, Val&> &rhs,
-                  const CCit<DSC, const Val*, const Val&> &lhs)
+  bool operator!=(const CC_iterator<DSC, false> &rhs,
+                  const CC_iterator<DSC, true> &lhs)
   { return &*rhs != &*lhs; }
 
-  template < class DSC, class Val >
+  template < class DSC >
   inline
-  bool operator!=(const CCit<DSC, const Val*, const Val&> &rhs,
-                  const CCit<DSC, Val*, Val&> &lhs)
+  bool operator!=(const CC_iterator<DSC, true> &rhs,
+                  const CC_iterator<DSC, false> &lhs)
   { return &*rhs != &*lhs; }
 
   // This is marked as deprecated in order to be able to test
   // our code without the feature, but we want to keep it forever
   // for backward compatibility.
 #ifndef CGAL_NO_DEPRECATED_CODE
-  template < class DSC, class Ptr, class Ref >
+  template < class DSC, bool Const >
   inline
-  bool operator==(const CCit<DSC, Ptr, Ref> &rhs,
+  bool operator==(const CC_iterator<DSC, Const> &rhs,
 		  CGAL_NULL_TYPE CGAL_assertion_code(n))
   {
     CGAL_assertion( n == NULL);
     return &*rhs == NULL;
   }
 
-  template < class DSC, class Val >
+  template < class DSC >
   inline
-  bool operator==(const CCit<DSC, Val*, Val&> &rhs,
+  bool operator==(const CC_iterator<DSC, false> &rhs,
 		  CGAL_NULL_TYPE CGAL_assertion_code(n))
   {
     CGAL_assertion( n == NULL);
@@ -821,36 +837,36 @@ namespace CGALi {
   }
 
 
-  template < class DSC, class Val >
+  template < class DSC >
   inline
-  bool operator==(const CCit<DSC, const Val*, const Val&> &rhs,
+  bool operator==(const CC_iterator<DSC, true> &rhs,
 		  CGAL_NULL_TYPE CGAL_assertion_code(n))
   {
     CGAL_assertion( n == NULL);
     return &*rhs == NULL;
   }
 
-  template < class DSC, class Ptr, class Ref >
+  template < class DSC, bool Const >
   inline
-  bool operator!=(const CCit<DSC, Ptr, Ref> &rhs,
+  bool operator!=(const CC_iterator<DSC, Const> &rhs,
 		  CGAL_NULL_TYPE CGAL_assertion_code(n))
   {
     CGAL_assertion( n == NULL);
     return &*rhs != NULL;
   }
 
-  template < class DSC, class Val >
+  template < class DSC >
   inline
-  bool operator!=(const CCit<DSC, Val*, Val&> &rhs,
+  bool operator!=(const CC_iterator<DSC, false> &rhs,
                   CGAL_NULL_TYPE CGAL_assertion_code(n))
   {
     CGAL_assertion( n == NULL);
     return &*rhs != NULL;
   }
 
-  template < class DSC, class Val >
+  template < class DSC >
   inline
-  bool operator!=(const CCit<DSC, const Val*, const Val&> &rhs,
+  bool operator!=(const CC_iterator<DSC, true> &rhs,
                   CGAL_NULL_TYPE CGAL_assertion_code(n))
   {
     CGAL_assertion( n == NULL);
@@ -859,18 +875,18 @@ namespace CGALi {
 #endif
 
 #else
-  template < class DSC, class Ptr1, class Ref1, class Ptr2, class Ref2 >
+  template < class DSC, bool Const1, bool Const2 >
   inline
-  bool operator==(const CCit<DSC, Ptr1, Ref1> &rhs,
-                  const CCit<DSC, Ptr2, Ref2> &lhs)
+  bool operator==(const CC_iterator<DSC, Const1> &rhs,
+                  const CC_iterator<DSC, Const2> &lhs)
   {
     return &*rhs == &*lhs;
   }
 
-  template < class DSC, class Ptr1, class Ref1, class Ptr2, class Ref2 >
+  template < class DSC, bool Const1, bool Const2 >
   inline
-  bool operator!=(const CCit<DSC, Ptr1, Ref1> &rhs,
-                  const CCit<DSC, Ptr2, Ref2> &lhs)
+  bool operator!=(const CC_iterator<DSC, Const1> &rhs,
+                  const CC_iterator<DSC, Const2> &lhs)
   {
     return &*rhs != &*lhs;
   }
@@ -879,18 +895,18 @@ namespace CGALi {
   // our code without the feature, but we want to keep it forever
   // for backward compatibility.
 #ifndef CGAL_NO_DEPRECATED_CODE
-  template < class DSC, class Ptr1, class Ref1>
+  template < class DSC, bool Const >
   inline
-  bool operator==(const CCit<DSC, Ptr1, Ref1> &rhs,
+  bool operator==(const CC_iterator<DSC, Const> &rhs,
                   CGAL_NULL_TYPE CGAL_assertion_code(n))
   {
     CGAL_assertion( n == NULL);
     return &*rhs == NULL;
   }
 
-  template < class DSC, class Ptr1, class Ref1>
+  template < class DSC, bool Const >
   inline
-  bool operator!=(const CCit<DSC, Ptr1, Ref1> &rhs,
+  bool operator!=(const CC_iterator<DSC, Const> &rhs,
 		  CGAL_NULL_TYPE CGAL_assertion_code(n))
   {
     CGAL_assertion( n == NULL);
